# kareoke_maker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: bootstrap.sh
src/karaoke_maker/: __init__.py  cli.py  commands.py  compat.py  config.py  download.py  lyrics.py  pipeline.py  render.py  separate.py  subtitles.py  transcribe.py  utils.py
tests/: test_integration_render.py  test_lyrics.py  test_pipeline.py  test_render.py  test_separate.py  test_subtitles.py  test_utils.py
